# email

./: .gitignore  CMakeLists.txt  README.md  email.vix  vix.json
examples/: basic.cpp  hooks.cpp  normalize.cpp  parse.cpp  validate.cpp
include/email/: email.hpp
include/gk/email/: email.hpp
tests/: test_basic.cpp
